editor-components/stats/stats30/stats30.module.scss
/* stats30.module.scss */

@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    background-color: var(--composer-html-background);

    .max-content {
        width: 100%;

        .content {
            display: flex;
            flex-direction: column;
            gap: var(--composer-gap-xl);
            width: 100%;

            .header-container {
                width: 100%;
                display: flex;
                flex-direction: column;
                align-items: flex-start;
                text-align: left;
                gap: var(--composer-gap-sm);

                .subtitle,
                .title,
                .description {
                    margin-top: 0;
                    margin-bottom: 0;
                }

                &[data-alignment="center"] {
                    align-items: center;
                    text-align: center;

                    .subtitle,
                    .title,
                    .description {
                        text-align: center;
                        margin-left: auto;
                        margin-right: auto;
                    }
                }
            }


            .cards-container {
                width: 100%;
                display: grid;
                grid-template-columns: repeat(var(--item-count, 2), 1fr);
                gap: var(--composer-gap-md);

                @container (max-width: #{$composer-tablet-width}) {
                    grid-template-columns: repeat(2, 1fr);
                }

                @container (max-width: #{$composer-phone-width}) {
                    grid-template-columns: repeat(1, 1fr);

                }

                .card {
                    background: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
                    padding: var(--composer-gap-xl);
                    border-radius: var(--composer-border-radius-md);
                    width: 100%;

                    .card-subtitle,
                    .card-title,
                    .card-description {
                        color: var(--composer-font-color-primary);
                        margin: 0;
                    }

                    .card-content {
                        display: flex;
                        flex-direction: column;
                        gap: var(--composer-gap-xs);
                        width: 100%;
                        align-items: flex-start;

                        @container (max-width: #{$composer-phone-width}) {
                            gap: var(--composer-gap-xxs);
                        }
                    }

                    &.colored-background {
                        background-color: var(--composer-html-color);

                        .card-subtitle,
                        .card-title,
                        .card-description,
                        .card-number {
                            color: var(--composer-font-color-primary);
                        }
                    }

                    .card-number {
                        font-size: 14rem;
                        color: var(--composer-primary-color);
                        line-height: 1;
                        display: flex;
                        align-items: center;
                        gap: 0.2rem;

                        .card-prefix,
                        .card-suffix {
                            font-size: 1em;
                            color: inherit;
                            line-height: 1;
                        }

                        @container (max-width: #{$composer-tablet-width}) {
                            font-size: 10rem;
                        }

                        // @container (max-width: #{$composer-phone-width}) {
                        //     font-size: 10rem;
                        // }
                    }

                    &[data-alignment="center"] {
                        .card-content {
                            align-items: center;
                            text-align: center;
                        }
                    }
                }
            }
        }

        .bottom-action-container {
            width: 100%;
            display: flex;
            justify-content: center;

            .button {
                .button-text {
                    text-align: center;
                }
            }
        }
    }
}

